@@ -153,6 +153,9 @@ Trunk (Unreleased)
 
   BUG FIXES
  
+    HDFS-8091: ACLStatus and XAttributes should be presented to INodeAttributesProvider
+               before returning to client (asuresh)
+
     HADOOP-9635 Fix potential Stack Overflow in DomainSocket.c (V. Karthik Kumar
                 via cmccabe)
 
